--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,26 +1,26 @@
 nav {
   display: grid; /* ? */
-  place-items: center; /* ? */
+  place-items: center;
   position: fixed;
-  left: 0; /* ? */
-  top: 0; /* ? */
+  left: 0;
+  top: 0;
   z-index: 99;
-  width: 100vw; /* ? */
+  width: 100vw;
   height: 5rem;
   background-color: var(--color-primary);
 }
 
 /* only shows on medium and small screens */
-.nav__toggole-btn {
+.nav__toggle-btn {
   display: none;
 }
 
 .nav__container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: relative;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
