--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -56,3 +56,53 @@ nav {
   transform: rotate(45deg);
   margin-top: 0.9rem;
 }
+
+/* MEDIA QUERIES (medium and small screens) */
+@media screen and (max-width: 1024px) {
+  .nav__toggle-btn {
+    display: inline-block;
+    background-color: transparent;
+    font-size: 1.8rem;
+    cursor: poniter;
+  }
+
+  .nav__toggle-btn svg {
+    color: var(--color-gray-100);
+  }
+
+  .nav__links {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    flex-direction: column;
+    gap: 0;
+  }
+
+  .active-nav,
+  .active-nav::after {
+    display: none;
+  }
+
+  .nav__links li {
+    width: 100%;
+    height: 4rem;
+    box-shadow: -2rem 2rem 5rem rgba(0, 0, 0, 0.4);
+  }
+
+  .nav__links li a {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-primary);
+    padding: 1rem 5rem 1rem 3rem;
+  }
+
+  .show__nav {
+    display: flex;
+  }
+
+  .hide__nav {
+    display: none;
+  }
+}
