--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -76,6 +76,7 @@ nav {
     right: 0;
     flex-direction: column;
     gap: 0;
+    perspective: 400px;
   }
 
   .active-nav,
@@ -86,7 +87,35 @@ nav {
   .nav__links li {
     width: 100%;
     height: 4rem;
-    box-shadow: -2rem 2rem 5rem rgba(0, 0, 0, 0.4);
+    box-shadow: -2rem 2rem 5rem rgba(0, 0, 0, 0.5);
+    animation: navAnimation 600ms ease forwards;
+    transform: rotateX(90deg);
+    opacity: 0;
+    transform-origin: top;
+  }
+
+  .nav__links li:nth-child(2) {
+    animation-delay: 200ms;
+  }
+
+  .nav__links li:nth-child(3) {
+    animation-delay: 400ms;
+  }
+
+  .nav__links li:nth-child(4) {
+    animation-delay: 600ms;
+  }
+
+  .nav__links li:nth-child(5) {
+    animation-delay: 800ms;
+  }
+
+  .nav__links li:nth-child(6) {
+    animation-delay: 1s;
+  }
+
+  .nav__links li:nth-child(7) {
+    animation-delay: 1.2s;
   }
 
   .nav__links li a {
@@ -96,6 +125,13 @@ nav {
     height: 100%;
     background-color: var(--color-primary);
     padding: 1rem 5rem 1rem 3rem;
+  }
+
+  @keyframes navAnimation {
+    to {
+      transform: rotateX(0);
+      opacity: 1;
+    }
   }
 
   .show__nav {
