--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,7 +1,7 @@
 nav {
   display: grid; /* ? */
   place-items: center;
-  /* position: fixed; */
+  position: fixed;
   left: 0;
   top: 0;
   z-index: 99;
